fix code block syntax highlight for markdown section in dark mode

--- a/app/containers/codeArea/markdown.scss
+++ b/app/containers/codeArea/markdown.scss
@@ -350,11 +350,11 @@
 
     code, tt {
      margin: 0 2px;
-     padding: 0 5px;
      white-space: nowrap;
      border: 1px solid #eaeaea;
-     background-color: #f8f7fa;
+     background-color: transparent;
      border-radius: 3px;
+     color: var(--text-primary);
     }
 
     pre code {
@@ -383,7 +383,7 @@
       color: #333;
       word-break: break-all;
       word-wrap: break-word;
-      background-color: #f5f5f5 !important;
+      // background-color: #f5f5f5 !important;
       border: 1px solid #ccc !important;
       border-radius: 4px !important;
     }
